--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -13,7 +13,7 @@
       <tr>
         <td><%= m.title %></td>
         <td><%= m.releaseYear %></td>
-        <td><a href="/movies/<%= m._id %>">DETAILS</a></td>
+        <td><a href="/movies/<%= m._id %>">SELECT</a></td>
       </tr>
       <% }); %>
     </tbody>
